--- a/src/entries/stylesheet.scss
+++ b/src/entries/stylesheet.scss
@@ -1,5 +1,5 @@
-@import '../stylesheets/reset';
-@import '../stylesheets/bell';
-@import '../stylesheets/customlink';
-@import '../stylesheets/helpers';
-@import '../stylesheets/slidedown';
+@import '../page/stylesheets/reset';
+@import '../page/stylesheets/bell';
+@import '../page/stylesheets/customlink';
+@import '../page/stylesheets/helpers';
+@import '../page/stylesheets/slidedown';
