remove necessary comment in css.

--- a/src/page/stylesheets/reset.scss
+++ b/src/page/stylesheets/reset.scss
@@ -490,7 +490,7 @@
   font-family: arial, helvetica, sans-serif;
   font-size: small;
   background: white;
-  appearance: button; /* [Deprecation] The keyword 'push-button' specified to an 'appearance' property is not standardized. It will be removed in the future. */
+  appearance: button;
   color: buttontext;
   border: 1px #a6a6a6 solid;
   background: lightgrey; /* Old browsers */
