--- a/src/stylesheets/slidedown.scss
+++ b/src/stylesheets/slidedown.scss
@@ -17,7 +17,8 @@ $desktop-width: 1024px;
 }
 
 .iti--container {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   @include mobile {
     z-index: 2258594001 !important;
@@ -32,7 +33,8 @@ $desktop-width: 1024px;
   }
 }
 
-#onesignal-slidedown-container, #onesignal-popover-container {
+#onesignal-slidedown-container,
+#onesignal-popover-container {
   font-size: 16px;
   position: fixed;
   z-index: 2258594000;
@@ -73,23 +75,23 @@ $desktop-width: 1024px;
 
       .onesignal-error-input {
         label: {
-          color:#646D74;
+          color: #646d74;
         }
 
         input {
-          background: #FCECEC;
-          border:1px solid #E54B4D;
+          background: #fcecec;
+          border: 1px solid #e54b4d;
 
           &:focus {
-            background: #FCECEC;
-            border:1px solid #E54B4D;
+            background: #fcecec;
+            border: 1px solid #e54b4d;
           }
         }
       }
 
       input {
-        border: 1px solid #CED3D8;
-        background: #FFFFFF;
+        border: 1px solid #ced3d8;
+        background: #ffffff;
         box-sizing: border-box;
         border-radius: 4px;
         height: 36px;
@@ -102,8 +104,8 @@ $desktop-width: 1024px;
         }
 
         &:focus {
-          background: #E5F2FC;
-          border: 1px solid #1F8FEB;
+          background: #e5f2fc;
+          border: 1px solid #1f8feb;
         }
       }
     }
@@ -122,7 +124,7 @@ $desktop-width: 1024px;
       }
 
       label {
-        color: #051B2C;
+        color: #051b2c;
       }
 
       @include tablet {
@@ -143,7 +145,7 @@ $desktop-width: 1024px;
         background-color: transparent;
         border-radius: 4px;
 
-        &:focus{
+        &:focus {
           outline: #0078d1;
         }
       }
@@ -152,7 +154,7 @@ $desktop-width: 1024px;
         width: 356px;
         box-shadow: 0px 1px 4px rgba(5, 27, 44, 0.2);
         border-radius: 4px;
-        background: #FFFFFF;
+        background: #ffffff;
         border: none;
         line-height: 28px;
       }
@@ -180,7 +182,8 @@ $desktop-width: 1024px;
     top: 0;
 
     &.close-slidedown {
-      #onesignal-slidedown-dialog, #onesignal-popover-dialog {
+      #onesignal-slidedown-dialog,
+      #onesignal-popover-dialog {
         -webkit-animation-name: slideDownExit;
         -webkit-animation-iteration-count: 1;
         -webkit-animation-timing-function: ease-out;
@@ -194,7 +197,8 @@ $desktop-width: 1024px;
       }
     }
 
-    #onesignal-slidedown-dialog, #onesignal-popover-dialog {
+    #onesignal-slidedown-dialog,
+    #onesignal-popover-dialog {
       width: 500px;
 
       -webkit-animation-name: slideDownEnter;
@@ -212,10 +216,12 @@ $desktop-width: 1024px;
         #blocked-slidedown {
           display: block;
         }
-        #normal-slidedown, #normal-popover {
+        #normal-slidedown,
+        #normal-popover {
           display: none;
         }
-        .slidedown-body-message, .popover-body-message {
+        .slidedown-body-message,
+        .popover-body-message {
           padding: 0 0.2em 0 0.2em;
           text-align: center;
           width: 100%;
@@ -231,22 +237,26 @@ $desktop-width: 1024px;
         width: 612px;
         margin-bottom: 18px;
 
-        .slidedown-button.secondary, .popover-button.secondary {
+        .slidedown-button.secondary,
+        .popover-button.secondary {
           padding: 0.714em 2em;
         }
       }
     }
   }
 
-  #blocked-slidedown, #blocked-popover {
+  #blocked-slidedown,
+  #blocked-popover {
     display: none;
   }
 
   &.slide-up {
     bottom: 0;
 
-    &.close-slidedown, &.close-popover {
-      #onesignal-slidedown-dialog, #onesignal-popover-dialog {
+    &.close-slidedown,
+    &.close-popover {
+      #onesignal-slidedown-dialog,
+      #onesignal-popover-dialog {
         -webkit-animation-name: slideUpExit;
         -webkit-animation-iteration-count: 1;
         -webkit-animation-timing-function: ease-out;
@@ -260,7 +270,8 @@ $desktop-width: 1024px;
       }
     }
 
-    #onesignal-slidedown-dialog, #onesignal-popover-dialog {
+    #onesignal-slidedown-dialog,
+    #onesignal-popover-dialog {
       border-bottom-left-radius: unset;
       border-bottom-right-radius: unset;
       width: 100%;
@@ -293,7 +304,7 @@ $desktop-width: 1024px;
     position: relative;
     padding-left: 2.5em;
     margin-bottom: 1.5em;
-    color: #051B2C;
+    color: #051b2c;
     font-size: 1em;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -302,7 +313,7 @@ $desktop-width: 1024px;
     height: 1.5em;
     width: 80%;
     line-height: 1.5em;
-    float:left;
+    float: left;
 
     .onesignal-category-label-input {
       position: absolute;
@@ -314,7 +325,7 @@ $desktop-width: 1024px;
       /* When the checkbox is checked, add a blue background */
       &:checked ~ .onesignal-checkmark {
         transition: ease 75ms;
-        background-color: #0078D1;
+        background-color: #0078d1;
       }
 
       &:checked ~ .onesignal-checkmark:after {
@@ -343,13 +354,13 @@ $desktop-width: 1024px;
       left: 0;
       height: 1.5em;
       width: 1.5em;
-      border-radius: .25em;
+      border-radius: 0.25em;
       cursor: pointer;
       background-color: #ebedef;
 
       /* Create the checkmark/indicator (hidden when not checked) */
       &:after {
-        content: "";
+        content: '';
         position: absolute;
         display: none;
         left: 0.5em;
@@ -375,8 +386,8 @@ $desktop-width: 1024px;
 
     & .onesignal-loading-message {
       flex: 1;
-      color: #CED3D8;
-      margin-top: .8125em;
+      color: #ced3d8;
+      margin-top: 0.8125em;
     }
   }
 
@@ -385,24 +396,31 @@ $desktop-width: 1024px;
     margin-left: 0.5em;
   }
 
-  #onesignal-slidedown-dialog, #onesignal-popover-dialog {
+  #onesignal-slidedown-dialog,
+  #onesignal-popover-dialog {
     box-sizing: border-box;
     max-width: 100%;
     margin: 0 auto;
-    box-shadow: 0 1px 6px rgba(5,27,44,.06), 0 2px 32px rgba(5,27,44,.16) !important;
+    box-shadow:
+      0 1px 6px rgba(5, 27, 44, 0.06),
+      0 2px 32px rgba(5, 27, 44, 0.16) !important;
     background: white !important;
     color: #051b2c;
     padding: 1.5em 1.5em;
     border-bottom-left-radius: $border-radius;
     border-bottom-right-radius: $border-radius;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Seoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+      Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+      'Seoe UI Symbol';
 
-    .slidedown-body, .popover-body {
+    .slidedown-body,
+    .popover-body {
       box-sizing: border-box;
       margin: 0;
     }
 
-    .slidedown-body-icon, .popover-body-icon {
+    .slidedown-body-icon,
+    .popover-body-icon {
       box-sizing: border-box;
       float: left;
       width: 80px;
@@ -424,7 +442,8 @@ $desktop-width: 1024px;
       }
     }
 
-    .slidedown-body-message, .popover-body-message {
+    .slidedown-body-message,
+    .popover-body-message {
       box-sizing: border-box;
       padding: 0 0 0 1em;
       font-weight: 400;
@@ -434,13 +453,13 @@ $desktop-width: 1024px;
       -o-user-select: none;
       user-select: none;
       cursor: default;
-      color: #051B2C !important;
+      color: #051b2c !important;
     }
 
     button {
       box-sizing: border-box;
       display: inline-block;
-      padding: .375rem 1rem;
+      padding: 0.375rem 1rem;
       font-size: 0.9625em;
       font-weight: 400;
       line-height: 1.5;
@@ -453,7 +472,7 @@ $desktop-width: 1024px;
       -ms-user-select: none;
       user-select: none;
       border: 1px solid transparent;
-      border-radius: .25rem;
+      border-radius: 0.25rem;
       font-family: inherit;
       letter-spacing: 0.05em;
       -webkit-transition: background-color 75ms ease;
@@ -461,35 +480,36 @@ $desktop-width: 1024px;
       margin: 0;
     }
 
-    .slidedown-button, .popover-button {
+    .slidedown-button,
+    .popover-button {
       padding: 0.75em 1.5em;
       font-size: 1em;
-      border-radius: .25em;
+      border-radius: 0.25em;
       font-weight: 400;
       box-shadow: unset;
       display: flex;
 
       &.primary {
-        background: #0078D1;
+        background: #0078d1;
         color: white !important;
         transition: linear 75ms;
 
         &:hover {
-          background: darken(#0078D1, 7.5%);
+          background: darken(#0078d1, 7.5%);
         }
 
         &:active {
-          background: darken(#0078D1, 15%);
+          background: darken(#0078d1, 15%);
         }
 
         &.disabled {
-          background-color: #CED3D8;
+          background-color: #ced3d8;
           cursor: default;
         }
 
         &.onesignal-saving-state-button {
           padding: 0.75em 1em;
-          background: #CED3D8;
+          background: #ced3d8;
           transition: linear 75ms;
         }
 
@@ -518,23 +538,25 @@ $desktop-width: 1024px;
           We sparingly use an !important tag here because it's important for the user to be able to click "No Thanks".
           Some sites set their own !important tag for text and we don't want that to be able to override ours.
          */
-        color: #0078D1 !important;
+        color: #0078d1 !important;
 
         &:hover {
-          color: darken(#0078D1, 12.5%);
+          color: darken(#0078d1, 12.5%);
         }
 
         &:active {
-          color: darken(#0078D1, 30.5%);
+          color: darken(#0078d1, 30.5%);
         }
       }
     }
 
-    .primary.slidedown-button+.secondary.slidedown-button, .primary.popover-button+.secondary.popover-button {
+    .primary.slidedown-button + .secondary.slidedown-button,
+    .primary.popover-button + .secondary.popover-button {
       margin-right: 0.714em;
     }
 
-    .slidedown-footer, .popover-footer {
+    .slidedown-footer,
+    .popover-footer {
       position: relative;
     }
 
@@ -556,8 +578,8 @@ $desktop-width: 1024px;
 
     .onesignal-tag-failure-message {
       display: flex;
-      float:left;
-      color:red;
+      float: left;
+      color: red;
     }
   }
 }
