--- a/src/entries/stylesheet.scss
+++ b/src/entries/stylesheet.scss
@@ -1,5 +1,5 @@
-@import '../page/stylesheets/reset';
-@import '../page/stylesheets/bell';
-@import '../page/stylesheets/customlink';
-@import '../page/stylesheets/helpers';
-@import '../page/stylesheets/slidedown';
+@use '../page/stylesheets/reset';
+@use '../page/stylesheets/bell';
+@use '../page/stylesheets/customlink';
+@use '../page/stylesheets/helpers';
+@use '../page/stylesheets/slidedown';
