--- a/src/page/stylesheets/helpers.scss
+++ b/src/page/stylesheets/helpers.scss
@@ -1,3 +1,6 @@
+@use 'sass:list';
+@use 'sass:map';
+@use 'sass:meta';
 /* http://stackoverflow.com/a/6900392 */
 @mixin unselectable() {
   -webkit-touch-callout: none;
@@ -33,9 +36,9 @@
   );
 
   @each $direction in $directions {
-    $opposite-direction: map-get($direction-map, $direction);
+    $opposite-direction: map.get($direction-map, $direction);
     @if $opposite-direction != null {
-      $opposite-directions: append(
+      $opposite-directions: list.append(
         $opposite-directions,
         #{$opposite-direction}
       );
@@ -56,10 +59,15 @@
 // ---
 @mixin _position($position, $args) {
   @each $o in top right bottom left {
-    $i: index($args, $o);
-    @if $i and $i + 1 <= length($args) and type-of(nth($args, $i + 1)) == number
+    $i: list.index($args, $o);
+    @if $i and
+      $i +
+      1 <=
+      list.length($args) and
+      meta.type-of(list.nth($args, $i + 1)) ==
+      number
     {
-      #{$o}: nth($args, $i + 1);
+      #{$o}: list.nth($args, $i + 1);
     }
   }
   position: $position;
@@ -83,7 +91,7 @@
 // ---
 @mixin triangle($direction, $position, $color: currentColor, $size: 1em) {
   // Make sure the direction is valid
-  @if not index(top right bottom left, $direction) {
+  @if not list.index(top right bottom left, $direction) {
     @warn "Direction must be one of top, right, bottom or left.";
   } @else {
     @include absolute($position); // Position
