--- a/src/page/stylesheets/slidedown.scss
+++ b/src/page/stylesheets/slidedown.scss
@@ -19,8 +19,9 @@ $desktop-width: 1024px;
 }
 
 .iti--container {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   @include mobile {
     z-index: 2258594001 !important;
@@ -411,9 +412,9 @@ $desktop-width: 1024px;
     padding: 1.5em 1.5em;
     border-bottom-left-radius: $border-radius;
     border-bottom-right-radius: $border-radius;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-      Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-      'Seoe UI Symbol';
+    font-family:
+      -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Seoe UI Symbol';
 
     .slidedown-body,
     .popover-body {
